[package]
name = "cubbytower"
version = "0.1.0"
author = ["Chris Ohk <utilforever@gmail.com>"]
description = "Reimplementation of CubbyTower using Rust and Bevy Engine"
repository = "https://github.com/utilforever/cubbytower-rs"
readme = "README.md"
keywords = [ "game", "cubbytower", "defense", "rust", "bevy" ]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
